# IterativeMethodsForSolvingLargeSystemsOfEquations

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  p.py
include/: COCG.h  COCG_Di_solver.h  COCR_Di_solver.h  cspan.h  mathUtils.h  slae.h  solver_result.h  span.h  symmetric_matrix.h  timer.h  vector.h
output/omp1/: COCG_Di_1.txt  COCG_Di_2.txt  COCG_Di_3.txt  COCG_Di_4.txt  COCG_Di_Smooth_1.txt  COCG_Di_Smooth_2.txt  COCG_Di_Smooth_3.txt  COCG_Di_Smooth_4.txt  COCR_Di_1.txt  COCR_Di_2.txt  COCR_Di_3.txt  COCR_Di_4.txt  COCR_Di_Smooth_1.txt  COCR_Di_Smooth_2.txt  COCR_Di_Smooth_3.txt  COCR_Di_Smooth_4.txt
output/omp2/: COCG_Di_1.txt  COCG_Di_2.txt  COCG_Di_3.txt  COCG_Di_4.txt  COCG_Di_Smooth_1.txt  COCG_Di_Smooth_2.txt  COCG_Di_Smooth_3.txt  COCG_Di_Smooth_4.txt  COCR_Di_1.txt  COCR_Di_2.txt  COCR_Di_3.txt  COCR_Di_4.txt  COCR_Di_Smooth_1.txt  COCR_Di_Smooth_2.txt  COCR_Di_Smooth_3.txt  COCR_Di_Smooth_4.txt
output/omp4/: COCG_Di_1.txt  COCG_Di_2.txt  COCG_Di_3.txt  COCG_Di_4.txt  COCG_Di_Smooth_1.txt  COCG_Di_Smooth_2.txt  COCG_Di_Smooth_3.txt  COCG_Di_Smooth_4.txt  COCR_Di_1.txt  COCR_Di_2.txt  COCR_Di_3.txt  COCR_Di_4.txt  COCR_Di_Smooth_1.txt  COCR_Di_Smooth_2.txt  COCR_Di_Smooth_3.txt  COCR_Di_Smooth_4.txt
output/omp8/: COCG_Di_1.txt  COCG_Di_2.txt  COCG_Di_3.txt  COCG_Di_4.txt  COCG_Di_Smooth_1.txt  COCG_Di_Smooth_2.txt  COCG_Di_Smooth_3.txt  COCG_Di_Smooth_4.txt  (+8 more)
python/: drawer.py
report/: main.tex
src/: COCG.cpp  COCG_Di_solver.cpp  COCR_Di_solver.cpp  main.cpp  mathUtils.cpp  slae.cpp  solver_result.cpp  symmetric_matrix.cpp  vector.cpp
(+59 files in other folders)
